fix(OpeningScreen): update z-index to show component above 'ScrollToTop' button

--- a/front/src/components/OpeningScreen/OpeningScreen.scss
+++ b/front/src/components/OpeningScreen/OpeningScreen.scss
@@ -30,7 +30,7 @@
 
 .opening-screen {
 	position: fixed;
-	z-index: var(--z-index-higher);
+	z-index: var(--z-index-modal);
 	inset: 0;
 
 	display: flex;
